--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body{
 
 .coverpic{
     background-image: url('./images/capture.jpg');
-    background-position: right 100% bottom 17%;
+    background-position: right 75% bottom 10%;
     background-size: auto;
     background-repeat: no-repeat;
     width: 40vw;
@@ -69,7 +69,7 @@ body{
 .description{
     font-weight: 500;
     width: 90%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 
@@ -93,14 +93,14 @@ body{
 }
 
 .title{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     width: 100%;
     font-weight: 500;
 }
 
 .input{
     width: 40%;
-    font-size: 1rem;
+    font-size: 0.7rem;
     display: flex;
     flex-flow: column wrap;
     opacity: 50%;
@@ -111,11 +111,68 @@ input{
     background-color: rgb(2, 2, 2);
     border: 1px solid rgb(77, 77, 77);
     border-radius: 3px;
-    line-height: 1.4;
-    font-size: 18px;
+ 
 }
 
 input:focus{
     outline: none;
     border: 2px solid var(--color);
+}
+
+button{
+    background-color: black;
+    color: var(--color);
+    font-weight: 700;
+    font-size: 1.2em;
+    border: 2px solid var(--color);
+    border-radius: 5px;
+    padding: 10px 40px;
+    margin: 40px 0;
+}
+
+button:hover{
+    background-color: var(--color);
+    color: black;
+}
+
+.already{
+    display: flex;
+    gap: 5px;
+}
+
+a{
+    text-decoration: none;
+    font-weight: 700;
+    color: var(--color);
+}
+
+a:hover{
+    color: white;
+}
+
+
+
+@media only screen and (max-width: 600px){
+
+    .container{
+        flex-flow: column;
+        height: auto;
+        text-align: center;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
