--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body{
     width: 40vw;
 }
 
+
 .rightcontent{
     width: 60vw;
     background-color: black;
@@ -91,6 +92,8 @@ body{
     padding-bottom: 20px;
     box-shadow: 0 10px 20px -2px rgb(22 22 22);
 }
+
+
 
 .title{
     font-size: 1.2rem;
@@ -140,13 +143,13 @@ button:hover{
     gap: 5px;
 }
 
-a{
+.loglink{
     text-decoration: none;
     font-weight: 700;
     color: var(--color);
 }
 
-a:hover{
+.loglink:hover{
     color: white;
 }
 
@@ -159,6 +162,72 @@ a:hover{
         height: auto;
         text-align: center;
     }
+
+    .coverpic{
+        height: 15vh;
+        width: 100vw;
+        display: flex;
+        background-size: 100vw;
+    }
+
+    .logo{
+        width: 100vw;
+        position: static;
+        gap: 10px;
+    }
+
+    .rightcontent{
+        height: auto;
+        width: auto;
+    }
+
+    .description{
+        width: auto;
+        margin: 30px;
+    }
+
+    .left{
+        padding: 10px 20px;
+    }
+
+    .filler{
+        padding: 20px 0;
+        margin: 0;
+    }
+
+    .form{
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+
+    .input{
+        text-align: left;
+        width: auto;
+        font-size: 0.9em;
+        justify-content: center;
+        align-items: center;
+    }
+
+    input{
+        font-size: 0.9rem;
+        height: 1.5rem;
+        width: 70vw;
+    }
+
+    .already{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 0px;
+    }
+
+
+
+
+
+
+
+
+
 
 
 
